--- a/assets/css/_fonts.scss
+++ b/assets/css/_fonts.scss
@@ -19,3 +19,22 @@
   font-display: swap;
   src: url('~assets/fonts/UbuntuMono-Bold.ttf') format('truetype');
 }
+@font-face {
+  font-family: 'OpenSans';
+  font-style: normal;
+  font-weight: 600;
+  font-display: swap;
+  src: url('~assets/fonts/OpenSans-Bold.ttf') format('truetype');
+}
+@font-face {
+  font-family: 'UbuntuMono';
+  font-style: normal;
+  font-weight: bold;
+  font-display: swap;
+  src: url('~assets/fonts/OpenSans-SemiBold.ttf') format('truetype');
+}
+
+
+$font-special: 'Press Start 2P';
+$font-primary: 'OpenSans';
+$font-secondary: 'UbuntuMono'
